package com.programacaoiii.model;

public enum TipoHardware {
	COMPUTADOR,
	NOTEBOOK,
	CELULAR,
	OUTROS,
}
