package com.programacaoiii.model;

public enum TipoPeca {
	PROCESSADOR,
	MEMORIA_RAM,
	PLACA_MAE,
	TELA,
	BATERIA
}
